# weather-station-v1

./: .gitignore
base-station/: .clang-format  .esp_port  .gitignore  CMakeLists.txt  README.md  README_CN.md  sdkconfig  sdkconfig.defaults  sdkconfig.old
base-station/components/bsp_extra/: CMakeLists.txt  idf_component.yml
base-station/components/lvgl_wrapper/: CMakeLists.txt  lv.hpp
base-station/components/lvgl_wrapper/assets/: cursor.hpp
base-station/components/lvgl_wrapper/core/: anim.hpp  anim_timeline.hpp  app.hpp  async.hpp  color.hpp  component.hpp  constants.hpp  display.hpp  event.hpp  focus.hpp  font.hpp  font_loader.hpp  fs.hpp  gridnav.hpp  i18n.hpp  image.hpp  indev.hpp  log.hpp  math.hpp  object.hpp  objectref.hpp  screen.hpp  snapshot.hpp  state.hpp  string_utils.hpp  style.hpp  theme.hpp  timer.hpp  transition.hpp  translation.hpp  verify.hpp  version.hpp  wrap.hpp
base-station/components/lvgl_wrapper/draw/: draw.hpp  draw_3d.hpp  draw_arc.hpp  draw_buf.hpp  draw_image.hpp  draw_label.hpp  draw_line.hpp  draw_mask.hpp  draw_rect.hpp  draw_task.hpp  draw_triangle.hpp  draw_vector.hpp  image_decoder.hpp  layer.hpp  primitives.hpp
base-station/components/lvgl_wrapper/layout/: flex.hpp  grid.hpp
base-station/components/lvgl_wrapper/libs/: barcode.hpp  gif.hpp  gltf.hpp  qrcode.hpp  svg.hpp
base-station/components/lvgl_wrapper/misc/: gradient.hpp
base-station/components/lvgl_wrapper/others/: fragment.hpp  monkey.hpp  sysmon.hpp
base-station/components/lvgl_wrapper/widgets/: animimage.hpp  arc.hpp  arclabel.hpp  bar.hpp  box.hpp  button.hpp  buttonmatrix.hpp  calendar.hpp  canvas.hpp  chart.hpp  checkbox.hpp  dropdown.hpp  file_explorer.hpp  image.hpp  imagebutton.hpp  ime_pinyin.hpp  keyboard.hpp  label.hpp  led.hpp  line.hpp  list.hpp  lottie.hpp  menu.hpp  msgbox.hpp  roller.hpp  scale.hpp  slider.hpp  span.hpp  spinbox.hpp  spinner.hpp  switch.hpp  table.hpp  tabview.hpp  textarea.hpp  texture3d.hpp  tileview.hpp  win.hpp
base-station/main/: CMakeLists.txt  idf_component.yml  main.cpp
base-station/main/data/: db.cpp  db.h  local-sensor.cpp  local-sensor.h  metrics.h  remote-sensor.cpp  remote-sensor.h  sensor.cpp  sensor.h
base-station/main/events/: edt.cpp  edt.h  metric-events.h  system-events.h
base-station/main/io/: sensor.cpp  sensor.h
base-station/main/log/: debug.cpp  debug.h  log.cpp  log.h
base-station/main/metrics/: metrics-repo.cpp  metrics-repo.h  remote-sensor.cpp  remote-sensor.h
base-station/main/net/: forecast-task.cpp  forecast-task.h  forecast.cpp  forecast.h  network.cpp  network.h
base-station/main/resources/fonts/: la-unicodes.txt  lasolid.h  montserrat-bold.h  montserrat-regular.h  montserrat-unicodes.txt
base-station/main/resources/icons/: arrow-up.h  cloudy-day-1.h  cloudy-day-2.h  cloudy-day-3.h  cloudy-night-1.h  cloudy-night-2.h  cloudy-night-3.h  cloudy.h  day.h  fog.h  night.h  raindrops.h  rainy-1.h  rainy-2.h  rainy-3.h  rainy-4.h  rainy-5.h  rainy-6.h  rainy-7.h  snowflakes.h  snowy-1.h  snowy-2.h  snowy-3.h  snowy-4.h  snowy-5.h  snowy-6.h  thunder.h  weather-sprite.h  weather.h  weather_sagittarius.h  weather_sunset.h  wind.h
base-station/main/ui/: Display.cpp  Display.h  display.cpp  display.h  edt.cpp  edt.h  forecast.cpp  forecast.h  header.cpp  header.h  outside-temp.cpp  outside-temp.h  theme.cpp  theme.h  ui-helpers.cpp  ui-helpers.h
base-station/main/ui/core/: card.h
base-station/main/ui/extensions/: style-wrapper.hpp
base-station/main/ui/fonts/: fonts.cpp  fonts.h  montserrat36.c  montserrat48.c  montserrat72.c
base-station/main/ui/icons/: icons.cpp  icons.h
base-station/main/utils/: json.cpp  json.h
base-station2/: CMakeLists.txt  idf_component.yml  p4_target.cfg  platformio.ini  sdkconfig.esp32-p4
base-station2/src/: main.cpp
sensor-aq/: .esp_port  CMakeLists.txt
sensor-aq/main/: CMakeLists.txt  main.cpp
sensor-aq/main/sps30/: sensirion_shdlc.c  sensirion_shdlc.h  sensirion_uart.h  sensirion_uart_implementation.c  sps30.c  sps30.h
sensor-rain/: .esp_port  CMakeLists.txt
sensor-rain/main/: CMakeLists.txt  main.cpp
sensor-receiver/: .esp_port  CMakeLists.txt
sensor-receiver/main/: CMakeLists.txt  main.cpp
sensor-receiver/main/bme280/: bme280.c  bme280.h  bme280_bits.h
sensor-receiver/main/sgp30/: sgp30.c  sgp30.h
sensor-temperature/: .esp_port  platformio.ini
sensor-temperature/main/: CMakeLists.txt  main.cpp
sensor-temperature/src/: main.cpp
sensor-uv/: .esp_port  CMakeLists.txt
sensor-uv/main/: CMakeLists.txt  main.cpp
shared-components/: CMakeLists.txt
shared-components/bme280/include/: bme280.h
shared-components/bme280/src/: bme280.c
shared-components/core/: CMakeLists.txt
shared-components/core/include/: espadc.h  espi2c.h  espio.h  espspi.h  espuart.h  models.h  radio.h  utils.h
shared-components/core/src/: espadc.c  espi2c.c  espio.c  espspi.c  espuart.c  radio.c  utils.c
shared_components/: CMakeLists.txt
shared_components/models/: CMakeLists.txt
shared_components/models/include/: models.h
shared_components/models/src/: models.c
