idf_component_register(
    SRCS 
        main.cpp 
        log/log.cpp
        log/debug.cpp
        events/edt.cpp
        metrics/remote-sensor.cpp
        metrics/metrics-repo.cpp
        ui/theme.cpp
        ui/ui-helpers.cpp
        ui/display.cpp
        ui/header.cpp
        ui/outside-temp.cpp
        ui/fonts/fonts.cpp
        net/network.cpp
        net/forecast.cpp
        ../../shared-components/core/src/espio.c
         ../../shared-components/core/src/espuart.c
   INCLUDE_DIRS 
        "../../shared-components/core/include"
        "${CMAKE_CURRENT_LIST_DIR}"
        "../components/lvgl_wrapper"         
        "../components/bsp_extra/include"          
    PRIV_REQUIRES 
        bsp_extra
        esp_wifi 
        esp_netif 
        esp_event 
        nvs_flash 
        lwip
        lvgl__lvgl
        waveshare__esp32_p4_platform
        waveshare__esp_lcd_ili9881c     
    EMBED_TXTFILES
        resources/fonts/Montserrat-Bold.ttf
        resources/fonts/Montserrat-Regular.ttf
)

idf_component_get_property(LVGL_LIB lvgl__lvgl COMPONENT_LIB)
target_compile_options(
    ${LVGL_LIB} 
    PRIVATE
        -DLV_LVGL_H_INCLUDE_SIMPLE

)
