idf_component_register(SRCS 
                           "core/src/adc.c" 
                           "core/src/radio.c" 
                           "core/src/espio.c" 
                           "core/src/cutils.c" 
                           "core/src/espuart.c"
                           "bme280/src/bme280.c"
                       INCLUDE_DIRS 
                           "core/include"
                           "bme280/include")
